Fix horizontal overflow on mobile

--- a/ResponsiveWebDesign/TechnicalDocumentation/main.css
+++ b/ResponsiveWebDesign/TechnicalDocumentation/main.css
@@ -78,6 +78,7 @@ ul {
     display: flex;
     flex-direction: column;
     gap: 40px;
+    overflow: hidden;
 }
 /* NAVBAR */
 #navbar {
